test_yuriiq/catalog/language/english/account/address.php
<?php

// text
$_['text_update']	= 'Your address has been successfully updated';
$_['text_account']	= 'Account';
$_['text_insert']	= 'Your address has been successfully inserted';
$_['text_delete']	= 'Your address has been successfully deleted';
$_['text_edit_address']	= 'Edit Address';
$_['text_address_book']	= 'Address Book Entries';

// error
$_['error_default']	= 'Warning: You can not delete your default address!';
$_['error_country']	= 'Please select a country!';
$_['error_delete']	= 'Warning: You must have at least one address!';
$_['error_vat']	= 'VAT number is invalid!';
$_['error_tax_id']	= 'Tax ID required!';
$_['error_firstname']	= 'First Name must be between 1 and 32 characters!';
$_['error_city']	= 'City must be between 2 and 128 characters!';
$_['error_postcode']	= 'Postcode must be between 2 and 10 characters!';
$_['error_company']	= 'Company name required!';
$_['error_lastname']	= 'Last Name must be between 1 and 32 characters!';
$_['error_address_1']	= 'Address must be between 3 and 128 characters!';
$_['error_zone']	= 'Please select a region / state!';
$_['error_company_id']	= 'Company ID required!';

// entry
$_['entry_firstname']	= 'First Name:';
$_['entry_default']	= 'Default Address:';
$_['entry_city']	= 'City:';
$_['entry_postcode']	= 'Post Code:';
$_['entry_address_1']	= 'Address:';
$_['entry_address_2']	= 'Address 2:';
$_['entry_company_id']	= 'Company ID:';
$_['entry_tax_id']	= 'Tax ID:';
$_['entry_zone']	= 'Region / State:';
$_['entry_lastname']	= 'Last Name:';
$_['entry_company']	= 'Company:';
$_['entry_country']	= 'Country:';

// heading
$_['heading_title']	= 'Address Book';
?>